Interstitial call ShowContextMenu on Android

Override |ShowContextMenu()| in InterstitialPageImpl and have it call
|WebContentsViewAndroid.ShowContextMenu()| on Android. This is done to
show the floating text selection menu (see linked bug).

Bug: 823173
Change-Id: I01090aee43536cd06c8f8bc28ebccf5c2767d0d8
Reviewed-on: https://chromium-review.googlesource.com/977240
Reviewed-by: Bo <boliu@chromium.org>
Reviewed-by: Carlos IL <carlosil@chromium.org>
Commit-Queue: Pedro Amaral <amaralp@chromium.org>
Cr-Commit-Position: refs/heads/master@{#546210}
Former-commit-id: a17de6fee41d662166d9a807ad33750491542e29