content/browser/frame_host/interstitial_page_impl.h
@@ -107,6 +107,8 @@ class CONTENT_EXPORT InterstitialPageImpl : public InterstitialPage,
                const NotificationDetails& details) override;
 
   // RenderFrameHostDelegate implementation:
+  void ShowContextMenu(RenderFrameHost* render_frame_host,
+                       const ContextMenuParams& params) override;
   bool OnMessageReceived(RenderFrameHostImpl* render_frame_host,
                          const IPC::Message& message) override;
   void RenderFrameCreated(RenderFrameHost* render_frame_host) override;
